# openair-rs

./: CHANGELOG.md  Cargo.toml  MAINTENANCE.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: parser.rs
example_data/: France.txt  Germany_Border.txt  README.md
examples/: parse_file.rs
src/: activations.rs  altitude.rs  classes.rs  coords.rs  geometry.rs  lib.rs  record.rs
tests/: parser.rs  serde.rs  writer.rs
tests/snapshots/: parser__france_fixture-2.snap  parser__france_fixture.snap  parser__germany_border_fixture-2.snap  parser__germany_border_fixture.snap  parser__germany_fixture-2.snap  parser__germany_fixture.snap  parser__switzerland_fixture-2.snap  parser__switzerland_fixture.snap  serde__serialize_json.snap  serde__serialize_json_ctr.snap
