[package]
name = "openair"
version = "0.4.0"
description = "Parser for airspace files in OpenAir format."
keywords = ["airspace", "skytraxx", "variometer", "openair", "parser"]
categories = ["parser-implementations"]
homepage = "https://github.com/glide-rs/openair-rs/"
repository = "https://github.com/glide-rs/openair-rs/"
readme = "README.md"
license = "MIT/Apache-2.0"
include = ["/src/**/*", "/examples/**/*", "/tests/**/*", "/Cargo.toml", "/README.md", "/LICENSE-*"]
edition = "2024"

[[bench]]
name = "parser"
harness = false

[dependencies]
log = "0.4"
regex = "1"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.7"
env_logger = "0.11"
serde_json = "1"
indoc = "2"
insta = { version = "1", features = ["json"] }
