[package]
name = "openair"
version = "0.4.0"
description = "Library for reading and writing airspace files in OpenAir format."
keywords = ["airspace", "skytraxx", "variometer", "openair", "parser"]
categories = ["parser-implementations"]
homepage = "https://github.com/glide-rs/openair-rs/"
repository = "https://github.com/glide-rs/openair-rs/"
readme = "README.md"
license = "MIT/Apache-2.0"
include = ["/src/**/*", "/examples/**/*", "/tests/**/*", "/Cargo.toml", "/README.md", "/LICENSE-*"]
edition = "2024"

[[bench]]
name = "parser"
harness = false

[features]
serde = ["dep:serde", "iso8601/serde"]

[dependencies]
iso8601 = "0.6"
log = "0.4"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.7"
env_logger = "0.11"
serde_json = "1"
indoc = "2"
insta = { version = "1", features = ["json"] }
